--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "internext",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://geosarmiento.github.io/internext/build",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
