gh-pages añadido

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "internext",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://geosarmiento.github.io/internext/build",
+  "homepage": "https://geosarmiento.github.io/internext/",
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
@@ -28,6 +28,7 @@
     "expo-linear-gradient": "^12.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -62,6 +63,8 @@
     "workbox-webpack-plugin": "^6.4.1"
   },
   "scripts": {
+    "predeploy": "npm rum build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
