--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "internext",
   "version": "0.1.0",
   "private": true,
-    "dependencies": {
+  "dependencies": {
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -47,6 +47,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.8.1",
+    "react-scroll-to-top": "^3.0.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.58.3",
