--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "expo-linear-gradient": "^12.1.1",
     "file-loader": "^6.2.0",
+    "firebase": "^9.17.2",
     "fs-extra": "^10.0.0",
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.0",
@@ -47,6 +48,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.8.1",
